--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "27.0.3"
     defaultConfig {
-        applicationId "fricke.spencer.com.vartip"
+        applicationId "com.sjfricke.vartip"
         minSdkVersion 24
         targetSdkVersion 26
         versionCode 1
@@ -26,16 +26,7 @@ android {
     }
 }
 
-// ******** Generate cdep module file for shaderc *******
-// this is same as running on command line of: ./cdep [cdep.bat]
-def CDEP_CMD='./cdep'
-if (System.properties['os.name'].toLowerCase().contains('windows')) {
-    CDEP_CMD='cdep.bat'
-}
-if(!file("../.cdep").exists()) {
-    exec {
-        workingDir("..")
-        executable "${CDEP_CMD}"
-        args = []
-    }
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
 }
