--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="fricke.spencer.com.vartip">
+          package="com.sjfricke.vartip">
 
     <!-- This is the platform API where NativeActivity was introduced. -->
     <uses-sdk />
 
     <uses-feature android:name="android.hardware.camera" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.SET_DEBUG_APP"/>
+    <!--<uses-permission android:name="android.permission.SET_DEBUG_APP"/>-->
 
     <!-- This .apk has no Java code itself, so set hasCode to false. -->
     <application android:label="@string/app_name"
