Added Validation Layer support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'com.android.application'
 
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+def ndkDir = properties.getProperty('ndk.dir')
+def valLayerBinDir = "${ndkDir}/sources/third_party/vulkan/src/build-android/jniLibs"
+
 android {
     compileSdkVersion 26
     buildToolsVersion "27.0.3"
@@ -15,12 +20,23 @@ android {
             cmake.arguments '-DANDROID_TOOLCHAIN=clang', '-DANDROID_STL=c++_static'
         }
     }
+
+    sourceSets {
+        main {
+            jniLibs {
+                // Must have ndk-r12 or better which including layer binaries
+                srcDirs = ["${valLayerBinDir}"]
+            }
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     externalNativeBuild {
         cmake.path 'src/main/cpp/CMakeLists.txt'
     }
